--- a/module1/LS_DS_121_Statistics_Probability_Assignment.ipynb
+++ b/module1/LS_DS_121_Statistics_Probability_Assignment.ipynb
@@ -70,9 +70,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 204
+          "height": 479
         },
-        "outputId": "40157473-72a3-4cd3-c2ab-ee741175ca95"
+        "outputId": "c1409a8b-7148-45dc-b6dd-d086eced5455"
       },
       "source": [
         "### YOUR CODE STARTS HERE\n",
@@ -87,61 +87,37 @@
         "\n",
         "!wget https://archive.ics.uci.edu/ml/machine-learning-databases/voting-records/house-votes-84.data\n",
         "\n",
-        "\n",
+        "df = pd.read_csv('house-votes-84.data',\n",
+        "                        header=None,\n",
+        "                         names=['party','handicapped-infants','water-project-cost-sharing',\n",
+        "                                  'adoption-budget','physician-fee-freeze', 'el-salvador-aid',\n",
+        "                                  'religious-groups','anti-satellite-ban',\n",
+        "                                  'aid-to-contras','mx-missile','immigration',\n",
+        "                                  'synfuels', 'education-spending', 'right-to-sue','crime','duty-free',\n",
+        "                                  'south-africa'])\n",
+        "print(df.shape)\n",
+        "df.head()\n",
         "\n",
         "\n",
         "\n",
         "\n"
       ],
-      "execution_count": 1,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--2020-03-16 22:48:42--  https://archive.ics.uci.edu/ml/machine-learning-databases/voting-records/house-votes-84.data\n",
+            "--2020-03-16 23:19:07--  https://archive.ics.uci.edu/ml/machine-learning-databases/voting-records/house-votes-84.data\n",
             "Resolving archive.ics.uci.edu (archive.ics.uci.edu)... 128.195.10.252\n",
             "Connecting to archive.ics.uci.edu (archive.ics.uci.edu)|128.195.10.252|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 18171 (18K) [application/x-httpd-php]\n",
-            "Saving to: ‘house-votes-84.data’\n",
+            "Saving to: ‘house-votes-84.data.1’\n",
             "\n",
             "\rhouse-votes-84.data   0%[                    ]       0  --.-KB/s               \rhouse-votes-84.data 100%[===================>]  17.75K  --.-KB/s    in 0.06s   \n",
             "\n",
-            "2020-03-16 22:48:42 (287 KB/s) - ‘house-votes-84.data’ saved [18171/18171]\n",
-            "\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "KhlVhXJviMQI",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 275
-        },
-        "outputId": "d6ef59e7-5b85-452d-e112-417da4f5b3ad"
-      },
-      "source": [
-        "df = pd.read_csv('house-votes-84.data',\n",
-        "                        header=None,\n",
-        "                         names=['party','handicapped-infants','water-project',\n",
-        "                                  'budget','physician-fee-freeze', 'el-salvador-aid',\n",
-        "                                  'religious-groups','anti-satellite-ban',\n",
-        "                                  'aid-to-contras','mx-missile','immigration',\n",
-        "                                  'synfuels', 'education', 'right-to-sue','crime','duty-free',\n",
-        "                                  'south-africa'])\n",
-        "print(df.shape)\n",
-        "df.head()"
-      ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
+            "2020-03-16 23:19:08 (295 KB/s) - ‘house-votes-84.data.1’ saved [18171/18171]\n",
+            "\n",
             "(435, 17)\n"
           ],
           "name": "stdout"
@@ -170,8 +146,8 @@
               "      <th></th>\n",
               "      <th>party</th>\n",
               "      <th>handicapped-infants</th>\n",
-              "      <th>water-project</th>\n",
-              "      <th>budget</th>\n",
+              "      <th>water-project-cost-sharing</th>\n",
+              "      <th>adoption-budget</th>\n",
               "      <th>physician-fee-freeze</th>\n",
               "      <th>el-salvador-aid</th>\n",
               "      <th>religious-groups</th>\n",
@@ -180,7 +156,7 @@
               "      <th>mx-missile</th>\n",
               "      <th>immigration</th>\n",
               "      <th>synfuels</th>\n",
-              "      <th>education</th>\n",
+              "      <th>education-spending</th>\n",
               "      <th>right-to-sue</th>\n",
               "      <th>crime</th>\n",
               "      <th>duty-free</th>\n",
@@ -293,12 +269,12 @@
               "</div>"
             ],
             "text/plain": [
-              "        party handicapped-infants water-project  ... crime duty-free south-africa\n",
-              "0  republican                   n             y  ...     y         n            y\n",
-              "1  republican                   n             y  ...     y         n            ?\n",
-              "2    democrat                   ?             y  ...     y         n            n\n",
-              "3    democrat                   n             y  ...     n         n            y\n",
-              "4    democrat                   y             y  ...     y         y            y\n",
+              "        party handicapped-infants  ... duty-free south-africa\n",
+              "0  republican                   n  ...         n            y\n",
+              "1  republican                   n  ...         n            ?\n",
+              "2    democrat                   ?  ...         n            n\n",
+              "3    democrat                   n  ...         n            y\n",
+              "4    democrat                   y  ...         y            y\n",
               "\n",
               "[5 rows x 17 columns]"
             ]
@@ -306,7 +282,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 2
+          "execution_count": 11
         }
       ]
     },
@@ -317,15 +293,15 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 258
+          "height": 275
         },
-        "outputId": "5049d2df-b185-41d4-9c3c-78c9e8bfce9f"
+        "outputId": "7b998d75-1e40-47c6-98a6-c5e348de96fa"
       },
       "source": [
         "df = df.replace({'?':np.NaN, 'n':0, 'y':1})\n",
         "df.head()"
       ],
-      "execution_count": 3,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -351,8 +327,8 @@
               "      <th></th>\n",
               "      <th>party</th>\n",
               "      <th>handicapped-infants</th>\n",
-              "      <th>water-project</th>\n",
-              "      <th>budget</th>\n",
+              "      <th>water-project-cost-sharing</th>\n",
+              "      <th>adoption-budget</th>\n",
               "      <th>physician-fee-freeze</th>\n",
               "      <th>el-salvador-aid</th>\n",
               "      <th>religious-groups</th>\n",
@@ -361,7 +337,7 @@
               "      <th>mx-missile</th>\n",
               "      <th>immigration</th>\n",
               "      <th>synfuels</th>\n",
-              "      <th>education</th>\n",
+              "      <th>education-spending</th>\n",
               "      <th>right-to-sue</th>\n",
               "      <th>crime</th>\n",
               "      <th>duty-free</th>\n",
@@ -487,7 +463,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 12
         }
       ]
     },
@@ -498,9 +474,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 428
+          "height": 445
         },
-        "outputId": "2c487c6b-d28b-48eb-c64e-b089a91978d6"
+        "outputId": "b44c24d9-dc1d-4205-a065-bfed7722b5ec"
       },
       "source": [
         "rep = df[df.party == \"republican\"]\n",
@@ -510,7 +486,7 @@
         "print(dem.shape)\n",
         "dem.head()"
       ],
-      "execution_count": 4,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -552,8 +528,8 @@
               "      <th></th>\n",
               "      <th>party</th>\n",
               "      <th>handicapped-infants</th>\n",
-              "      <th>water-project</th>\n",
-              "      <th>budget</th>\n",
+              "      <th>water-project-cost-sharing</th>\n",
+              "      <th>adoption-budget</th>\n",
               "      <th>physician-fee-freeze</th>\n",
               "      <th>el-salvador-aid</th>\n",
               "      <th>religious-groups</th>\n",
@@ -562,7 +538,7 @@
               "      <th>mx-missile</th>\n",
               "      <th>immigration</th>\n",
               "      <th>synfuels</th>\n",
-              "      <th>education</th>\n",
+              "      <th>education-spending</th>\n",
               "      <th>right-to-sue</th>\n",
               "      <th>crime</th>\n",
               "      <th>duty-free</th>\n",
@@ -675,12 +651,12 @@
               "</div>"
             ],
             "text/plain": [
-              "      party  handicapped-infants  water-project  ...  crime  duty-free  south-africa\n",
-              "2  democrat                  NaN            1.0  ...    1.0        0.0           0.0\n",
-              "3  democrat                  0.0            1.0  ...    0.0        0.0           1.0\n",
-              "4  democrat                  1.0            1.0  ...    1.0        1.0           1.0\n",
-              "5  democrat                  0.0            1.0  ...    1.0        1.0           1.0\n",
-              "6  democrat                  0.0            1.0  ...    1.0        1.0           1.0\n",
+              "      party  handicapped-infants  ...  duty-free  south-africa\n",
+              "2  democrat                  NaN  ...        0.0           0.0\n",
+              "3  democrat                  0.0  ...        0.0           1.0\n",
+              "4  democrat                  1.0  ...        1.0           1.0\n",
+              "5  democrat                  0.0  ...        1.0           1.0\n",
+              "6  democrat                  0.0  ...        1.0           1.0\n",
               "\n",
               "[5 rows x 17 columns]"
             ]
@@ -688,7 +664,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 13
         }
       ]
     },
@@ -701,12 +677,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 170
         },
-        "outputId": "c444a0bb-ef0a-4ec3-b602-3277ffaafa36"
+        "outputId": "a56e1069-d3c4-4dc0-8e1c-bb0fda541589"
       },
       "source": [
         "dem['physician-fee-freeze'].describe()"
       ],
-      "execution_count": 5,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -726,7 +702,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 14
         }
       ]
     },
@@ -739,12 +715,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 170
         },
-        "outputId": "f7b3632d-a837-4cce-f668-5f4a5a96ca3a"
+        "outputId": "397b2465-286e-4e8f-e614-87bf20c90afd"
       },
       "source": [
         "rep['physician-fee-freeze'].describe()"
       ],
-      "execution_count": 6,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -764,7 +740,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 15
         }
       ]
     },
@@ -777,33 +753,33 @@
           "base_uri": "https://localhost:8080/",
           "height": 561
         },
-        "outputId": "0b15d60c-8a1a-4524-afd4-8f48b1ef049e"
+        "outputId": "df5cc712-ef76-48f0-9b5f-136b8a71da9f"
       },
       "source": [
         "def mw(x):\n",
         "         return(ttest_ind(rep[x], dem[x], nan_policy='omit'));\n",
         "        \n",
-        "ax = ['handicapped-infants','water-project',\n",
-        "      'budget','physician-fee-freeze', 'el-salvador-aid',\n",
+        "ax = ['handicapped-infants','water-project-cost-sharing',\n",
+        "      'adoption-budget','physician-fee-freeze', 'el-salvador-aid',\n",
         "      'religious-groups','anti-satellite-ban',\n",
         "      'aid-to-contras','mx-missile','immigration',\n",
-        "      'synfuels', 'education', 'right-to-sue','crime','duty-free',\n",
+        "      'synfuels', 'education-spending', 'right-to-sue','crime','duty-free',\n",
         "      'south-africa']\n",
         "        \n",
         "for i in ax:\n",
         "  print(i)\n",
         "  print(mw(i))"
       ],
-      "execution_count": 7,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "handicapped-infants\n",
             "Ttest_indResult(statistic=-9.205264294809222, pvalue=1.613440327937243e-18)\n",
-            "water-project\n",
+            "water-project-cost-sharing\n",
             "Ttest_indResult(statistic=0.08896538137868286, pvalue=0.9291556823993485)\n",
-            "budget\n",
+            "adoption-budget\n",
             "Ttest_indResult(statistic=-23.21277691701378, pvalue=2.0703402795404463e-77)\n",
             "physician-fee-freeze\n",
             "Ttest_indResult(statistic=49.36708157301406, pvalue=1.994262314074344e-177)\n",
@@ -821,7 +797,7 @@
             "Ttest_indResult(statistic=1.7359117329695164, pvalue=0.08330248490425066)\n",
             "synfuels\n",
             "Ttest_indResult(statistic=-8.293603989407588, pvalue=1.5759322301054064e-15)\n",
-            "education\n",
+            "education-spending\n",
             "Ttest_indResult(statistic=20.500685724563073, pvalue=1.8834203990450192e-64)\n",
             "right-to-sue\n",
             "Ttest_indResult(statistic=13.51064251060933, pvalue=1.2278581709672758e-34)\n",
@@ -845,12 +821,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 282
         },
-        "outputId": "7d474ba7-2191-4490-d196-e3d084c4c0d6"
+        "outputId": "8cce56d5-f2d2-4c4b-a071-0060bee08348"
       },
       "source": [
         "dem['physician-fee-freeze'].hist(bins=2, color='b');\n"
       ],
-      "execution_count": 8,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "display_data",
@@ -875,24 +851,24 @@
           "base_uri": "https://localhost:8080/",
           "height": 299
         },
-        "outputId": "76e2be0a-ca4e-4c50-d8ee-dcc559a06493"
+        "outputId": "61d1c65d-cfec-45c2-e86e-845129f5ab08"
       },
       "source": [
         "rep['physician-fee-freeze'].hist(bins=2, color='r')"
       ],
-      "execution_count": 9,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7fcc0cbe89e8>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7fcc0cad2518>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 18
         },
         {
           "output_type": "display_data",
@@ -917,13 +893,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 282
         },
-        "outputId": "75e0bdb5-154d-4d1a-d310-8ee66aebe4c5"
+        "outputId": "9dce5fe6-6fac-402a-aae7-fe487c86b320"
       },
       "source": [
-        "dem['education'].hist(bins=2, color='b');\n",
-        "rep['education'].hist(bins=2, color='r');"
+        "dem['education-spending'].hist(bins=2, color='b');\n",
+        "rep['education-spending'].hist(bins=2, color='r');"
       ],
-      "execution_count": 10,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "display_data",
